# LetsFG

./: .gitignore  AGENTS.md  CLAUDE.md  CONNECTOR_STATUS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SKILL.md  _show_degraded.py  main.py  mcp-config.json  mkdocs.yml  openapi.yaml  server.json
.github/workflows/: docs.yml  update-star-history.yml
connectors/: README.md  aerolineas.py  airarabia.py  airasia.py  airbaltic.py  airchina.py  airfrance.py  airindiaexpress.py  airline_routes.py  airpeace.py  akasa.py  allegiant.py  asiana.py  austrian.py  azul.py  bangkokairways.py  batikair.py  britishairways.py  browser.py  brusselsairlines.py  cebupacific.py  checkout_engine.py  chinaairlines.py  condor.py  discover.py  easyjet.py  emirates.py  engine.py  eurowings.py  evaair.py  flair.py  flybondi.py  flydubai.py  flynas.py  flysafair.py  frontier.py  gol.py  hainan.py  iberia.py  iberiaexpress.py  (+47 more)
docs/: CNAME  agent-guide.md  api-guide.md  architecture-guide.md  cli-reference.md  getting-started.md  index.md  openapi.md  packages.md  quickstart-claude.md  quickstart-cursor.md  quickstart-windsurf.md  self-hosting.md  tutorials.md
docs/assets/: extra.css
docs/overrides/: .gitkeep
models/: __init__.py  flights.py
sdk/js/: README.md  package-lock.json  package.json
sdk/js/src/: cli.ts  index.ts
sdk/mcp/: README.md  package-lock.json  package.json
sdk/mcp/src/: index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/boostedtravel/: CONNECTOR_STATUS.md  __init__.py  cli.py  client.py  local.py  models.py
sdk/python/boostedtravel/connectors/: airline_routes.py  allegiant.py  azul.py  batikair.py  booking_base.py  breeze.py  browser.py  checkout_engine.py  condor.py  easyjet.py  engine.py  eurowings.py  flybondi.py  flydubai.py  flynas.py  frontier.py  jet2.py  jetblue.py  jetstar.py  luckyair.py  nineair.py  norwegian.py  peach.py  play.py  porter.py  ryanair.py  salamair.py  scoot.py  spicejet.py  spirit.py  sunexpress.py  transavia.py  twayair.py  volotea.py  vueling.py  wizzair.py  zipair.py
sdk/python/boostedtravel/models/: __init__.py
sdk/python/letsfg/: CONNECTOR_STATUS.md  __init__.py  cli.py  client.py  local.py  models.py
sdk/python/letsfg/connectors/: aegean.py  aerlingus.py  aerolineas.py  airarabia.py  airasia.py  airasiax.py  airbaltic.py  aircanada.py  airchina.py  aireuropa.py  airfrance.py  airindia.py  airindiaexpress.py  airline_routes.py  airnewzealand.py  airniugini.py  airnorth.py  airpeace.py  airserbia.py  airseychelles.py  airtransat.py  akasa.py  alaska.py  allegiant.py  american.py  arajet.py  asiana.py  austrian.py  avelo.py  avianca.py  azoresairlines.py  azul.py  bangkokairways.py  batikair.py  biman.py  booking_base.py  breeze.py  britishairways.py  browser.py  brusselsairlines.py  (+127 more)
sdk/python/letsfg/models/: __init__.py  flights.py
services_connector-worker/: requirements.txt
services_connector-worker/connector_patches/: kiwi.py
services_flight-search-worker/: requirements.txt  search_worker.py
website/app/: home-search-form.tsx
