[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boostedtravel"
version = "0.2.10"
description = "Agent-native flight search & booking. 400+ airlines, 58 direct LCC scrapers run locally. Built for autonomous AI agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "BoostedTravel"},
]
keywords = [
    "flights", "travel", "booking", "agent", "ai", "cli",
    "autonomous", "mcp", "openai", "airline", "ndc",
    "scraper", "low-cost", "ryanair", "wizzair", "easyjet",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "curl_cffi>=0.7.0",
    "playwright_stealth>=1.0.6",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "click>=8.0,<8.2",
]
all = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "click>=8.0,<8.2",
    "nodriver>=0.38",
    "patchright>=1.0",
]

[project.scripts]
boostedtravel = "boostedtravel.cli:main"

[project.urls]
Homepage = "https://boostedchat.com"
Documentation = "https://api.boostedchat.com/docs"
Repository = "https://github.com/Boosted-Chat/BoostedTravel"
Issues = "https://github.com/Boosted-Chat/BoostedTravel/issues"
"API Reference" = "https://api.boostedchat.com/redoc"

[tool.hatch.build.targets.wheel]
packages = ["boostedtravel"]
