[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "letsfg"
version = "2026.4.60"
description = "Agent-native flight search & booking. 400+ airlines, 195 direct airline connectors run locally. Built for autonomous AI agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "LetsFG"},
]
keywords = [
    "flights", "travel", "booking", "agent", "ai", "cli",
    "autonomous", "mcp", "openai", "airline", "ndc",
    "scraper", "low-cost", "ryanair", "wizzair", "easyjet",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "curl_cffi>=0.7.0",
    "playwright_stealth>=1.0.6",
    "aiohttp>=3.9.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "click>=8.0,<8.2",
]

[project.optional-dependencies]
all = [
    "nodriver>=0.38",
    "patchright>=1.0",
]

[project.scripts]
letsfg = "letsfg.cli:main"

[project.urls]
Homepage = "https://letsfg.co"
Documentation = "https://api.letsfg.co/docs"
Repository = "https://github.com/LetsFG/LetsFG"
Issues = "https://github.com/LetsFG/LetsFG/issues"
"API Reference" = "https://api.letsfg.co/redoc"

[tool.hatch.build.targets.wheel]
packages = ["letsfg"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/_*",
    "/.test_*",
    "/_test_*",
    "*.png",
    "*.json",
    "*.pma",
    "*.db",
    "*.db-journal",
    ".test_ita_profile/",
    "__pycache__/",
    ".pytest_cache/",
    "dist/",
    "build/",
    "*.egg-info/",
]
